Assessment student detail card size adjusted to prevent flex wrap.

--- a/web/app/assessments/students/student-detail.component.css
+++ b/web/app/assessments/students/student-detail.component.css
@@ -1,5 +1,5 @@
 .student-card {
-    flex: 0 0 240px;
+    flex: 0 0 280px;
 }
 
 /*.student-card .card {
@@ -29,4 +29,5 @@
 
 .table td {
     vertical-align: middle;
+    min-width: 50px;
 }
